--- a/phases/phase1/requirements.txt
+++ b/phases/phase1/requirements.txt
@@ -1,13 +1,15 @@
+# Core dependencies
 fastapi>=0.68.0
 uvicorn>=0.15.0
-pydantic>=1.8.0
+pydantic>=2.0.0,<3.0.0  # Using Pydantic v2 features
 textblob>=0.17.1
 pytest>=6.2.5
 pytest-asyncio>=0.16.0
-httpx>=0.19.0
+pytest-mock>=3.10.0  # For better test mocking
+pytest-cov>=2.12.0  # For test coverage
+httpx>=0.19.0  # For FastAPI TestClient
 spacy>=3.1.0
 python-multipart>=0.0.5
 typing-extensions>=4.0.0
-black>=22.3.0  # for code formatting
-pylint>=2.8.0  # for code linting
-pytest-cov>=2.12.0  # for test coverage
+black>=22.3.0  # For code formatting
+pylint>=2.8.0  # For code linting
