--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,50 @@
 # Virtual environment
 venv/
+env/
+.venv/
+ENV/
 
 # Python cache files
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
 .pytest_cache/
+.coverage
+htmlcov/
+
+# Build and distribution
+build/
+dist/
+*.egg-info/
+.eggs/
+*.egg
 
 # Project specific
 logs/
 *.log
 *.jsonl
+models/
+*.pth
+*.onnx
+*.bin
 
 # IDE specific
 .vscode/
 .idea/
+*.swp
+*.swo
+.DS_Store
 
 # Environment variables
 .env
+.env.local
+.env.*.local
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb
+
+# Local development
+*.bak
+*.tmp
+*.temp
